# DAQ-Middleware

./: CMakeLists.txt
cmake/: DAQMWConfig.cmake.in
conf/: CMakeLists.txt
docs/: CMakeLists.txt
etc/: CMakeLists.txt
etc/remote-boot/: CMakeLists.txt  bootComps-xinetd.sample.in
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/DaqComponent/: CMakeLists.txt
src/DaqComponent/idl/: CMakeLists.txt
src/DaqOperator/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/SiTCP/C/: CMakeLists.txt
src/lib/SiTCP/C/sitcpbcp/: CMakeLists.txt
src/lib/SiTCP/C/sitcpbcp/programs/: CMakeLists.txt
src/lib/SiTCP/C/sock/: CMakeLists.txt
src/lib/SiTCP/CPP/: CMakeLists.txt
src/lib/SiTCP/CPP/Sock/: CMakeLists.txt
src/lib/SiTCP/CPP/Sock/test/: CMakeLists.txt
src/lib/json_spirit_v2.06/: CMakeLists.txt
src/lib/json_spirit_v2.06/json_spirit/: CMakeLists.txt
src/mk/: CMakeLists.txt
utils/: CMakeLists.txt
utils/conditionPanel/: CMakeLists.txt
utils/configGUI/: CMakeLists.txt
utils/daqcom/: CMakeLists.txt
utils/daqmw-emulator/: CMakeLists.txt
utils/dmbepanel/: CMakeLists.txt
utils/newcomp/: CMakeLists.txt
utils/pythonLibSetup/: CMakeLists.txt
www/: CMakeLists.txt  Distributions.cmake
www/mod_python/: CMakeLists.txt
www/mod_python/js/: CMakeLists.txt
www/mod_python/operatorPanel/: CMakeLists.txt
www/mod_python/parts/: CMakeLists.txt
