include(${CMAKE_SOURCE_DIR}/www/Distributions.cmake)

install(FILES
  beginbutton.jpg
  beginbuttonlight.jpg
  configurationbutton.jpg
  configurationbuttonlight.jpg
  endbutton.jpg
  endbuttonlight.jpg
  getstatebutton.jpg
  pausebutton.jpg
  pausebuttonlight.jpg
  restartbutton.jpg
  restartbuttonlight.jpg
  setstatebutton.jpg
  unconfigurebutton.jpg
  unconfigurebuttonlight.jpg
  DESTINATION ${WWW_DOCUMENT_ROOT}/daqmw/parts
  )

